--- a/ManicCheckr/ManicCheckr.csproj
+++ b/ManicCheckr/ManicCheckr.csproj
@@ -32,9 +32,10 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <UseVSHostingProcess>false</UseVSHostingProcess>
   </PropertyGroup>
   <PropertyGroup>
-    <StartupObject />
+    <StartupObject>ManicCheckr.Program</StartupObject>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
